--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ body {
 
 figure {
     margin: 0;
+    height: 50vh;
 }
 
 .register,
@@ -122,7 +123,7 @@ figure {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 50%;
+    margin-top: 30%;
 }
 
 .info-user input {
@@ -148,4 +149,20 @@ figure {
     font-weight: bold;
     float: left;
     color: #4c4b62;
+}
+
+#close {
+    background-color: transparent;
+    float: right;
+    border: none;
+    font-size: 12px;
+    margin-right: 30px;
+    margin-top: 10px;
+}
+
+#close:hover {
+    background-color: #4c4b62;
+    transform: scale(1.5);
+    font-size: 12px;
+    border-radius: 20px;
 }
