--- a/src/style.css
+++ b/src/style.css
@@ -188,3 +188,49 @@ figure {
         font-size: 35px;
     }
 }
+
+/* Sección de registro */
+.section-register{
+    box-sizing: border-box;
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background: #ECBCB1;
+    width: 100vw;
+    height: 100vh;
+}
+
+[class^="register-"]{
+    box-sizing: border-box;
+    display: flex;
+    border: solid #4C4B62 2px;
+    width: 300px;
+    height: 50px;
+    margin: 15px;
+    padding: 5px;
+    border-radius: 10px;
+    font-size: 1.5rem;
+    font-family: 'Cabin', sans-serif;
+}
+
+.section-register h1{
+    text-align: center;
+    color: #4C4B62;
+    font-size: 2rem;
+}
+
+.button-register{
+    box-sizing: border-box;
+    display: flex;
+    padding: 3px;
+    width: 180px;
+    height: 45px;
+    font-size: 1.5rem;
+    color: #ffffff;
+    background: #4C4B62;
+    border: none;
+    border-radius: 35px;
+    justify-content: center;   
+}
