--- a/src/style.css
+++ b/src/style.css
@@ -1,236 +1,231 @@
-*:before,
-*:after {
-    box-sizing: inherit;
+.selector-for-some-widget {
+  box-sizing: content-box;
 }
 
 body {
-    background-color: #ECBCB1;
-    font-family: 'Roboto', sans-serif;
+  background-color: #ecbcb1;
+  font-family: "Roboto", sans-serif;
 }
 
 figure {
-    margin: 0;
-    height: 50vh;
+  margin: 0;
+  height: 50vh;
 }
 
 .register,
 .login,
 .logo,
 .welcome-page {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .logo {
-    display: flex;
-    height: 40vh;
+  display: flex;
+  height: 40vh;
 }
 
 .logo img {
-    margin-top: 2rem;
-    height: 85%;
+  margin-top: 2rem;
+  height: 85%;
 }
 
 .welcome-body,
 .register-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 90%;
-    height: auto;
-    background-color: #CAC8CA;
-    margin: 2rem auto;
-    border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+  height: auto;
+  background-color: #cac8ca;
+  margin: 2rem auto;
+  border-radius: 15px;
 }
 
 .login-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 90vw;
-    height: 80vh;
-    background-color: #CAC8CA;
-    margin: 2rem auto;
-    border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90vw;
+  height: 80vh;
+  background-color: #cac8ca;
+  margin: 2rem auto;
+  border-radius: 15px;
 }
 
 .login-body p {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .welcome-body p {
-    padding: 0rem 2rem;
-    text-align: justify;
-    color: #4c4b62;
+  padding: 0rem 2rem;
+  text-align: justify;
+  color: #4c4b62;
 }
 
 .login-button,
 .register-button,
 .enter-button {
-    text-decoration: none;
-    padding: 10px;
-    font-weight: 600;
-    font-size: 20px;
-    color: #ffffff;
-    background-color: #faca6d;
-    border-radius: 6px;
-    border: 2px solid #f7dca8;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+  text-decoration: none;
+  padding: 10px;
+  font-weight: 600;
+  font-size: 20px;
+  color: #ffffff;
+  background-color: #faca6d;
+  border-radius: 6px;
+  border: 2px solid #f7dca8;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .fb-button {
-    text-decoration: none;
-    padding: 10px;
-    font-weight: 600;
-    font-size: 20px;
-    color: #ffffff;
-    background-color: #2f3adb;
-    border-radius: 6px;
-    border: 2px solid #373ad3;
-    margin-bottom: 1rem;
-    margin-top: 2rem;
-    cursor: pointer;
+  text-decoration: none;
+  padding: 10px;
+  font-weight: 600;
+  font-size: 20px;
+  color: #ffffff;
+  background-color: #2f3adb;
+  border-radius: 6px;
+  border: 2px solid #373ad3;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
+  cursor: pointer;
 }
 
 .google-button {
-    text-decoration: none;
-    padding: 10px;
-    font-weight: 600;
-    font-size: 20px;
-    color: #ffffff;
-    background-color: red;
-    border-radius: 6px;
-    border: 2px solid red;
-    margin-bottom: 1rem;
-    cursor: pointer;
+  text-decoration: none;
+  padding: 10px;
+  font-weight: 600;
+  font-size: 20px;
+  color: #ffffff;
+  background-color: red;
+  border-radius: 6px;
+  border: 2px solid red;
+  margin-bottom: 1rem;
+  cursor: pointer;
 }
 
 .login-button:hover,
 .register-button:hover,
 .enter-button:hover {
-    color: #faca6d;
-    background-color: #ffffff;
-}
-
-.hide {
-    display: none;
+  color: #faca6d;
+  background-color: #ffffff;
 }
 
 .info-user {
-    width: fit-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10%;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
 }
 
 .info-user input {
-    -webkit-box-shadow: 9px 2px 17px 1px rgba(58, 51, 53, 0.13);
-    -moz-box-shadow: 9px 2px 17px 1px rgba(58, 51, 53, 0.13);
-    box-shadow: 9px 2px 17px 1px rgba(58, 51, 53, 0.13);
-    margin: 0.5rem auto;
-    border-radius: 15px;
-    border: 2px solid #faca6d;
-    padding: 0.5rem;
+  -webkit-box-shadow: 9px 2px 17px 1px rgba(58, 51, 53, 0.13);
+  -moz-box-shadow: 9px 2px 17px 1px rgba(58, 51, 53, 0.13);
+  box-shadow: 9px 2px 17px 1px rgba(58, 51, 53, 0.13);
+  margin: 0.5rem auto;
+  border-radius: 15px;
+  border: 2px solid #faca6d;
+  padding: 0.5rem;
 }
 
 .line {
-    margin: 0px 20px;
-    width: 90px;
-    border-top: 1px solid #999;
-    position: relative;
-    top: 10px;
-    float: left;
+  margin: 0px 20px;
+  width: 90px;
+  border-top: 1px solid #999;
+  position: relative;
+  top: 10px;
+  float: left;
 }
 
 .leyend {
-    font-weight: bold;
-    float: left;
-    color: #4c4b62;
+  font-weight: bold;
+  float: left;
+  color: #4c4b62;
 }
 
 #close {
-    background-color: transparent;
-    float: right;
-    border: none;
-    font-size: 12px;
-    margin-right: 30px;
-    margin-top: 10px;
+  background-color: transparent;
+  float: right;
+  border: none;
+  font-size: 12px;
+  margin-right: 30px;
+  margin-top: 10px;
 }
 
 #close:hover {
-    background-color: #4c4b62;
-    transform: scale(1.5);
-    font-size: 12px;
-    border-radius: 20px;
+  background-color: #4c4b62;
+  transform: scale(1.5);
+  font-size: 12px;
+  border-radius: 20px;
 }
 
 @media only screen and (min-width: 768px) {
-    .register-body,
-    .login-body {
-        max-width: 60%;
-    }
-    .register-title {
-        width: 90%;
-        font-size: x-large;
-    }
-    .info-new-user input {
-        width: 20rem;
-    }
-    .budget-page {
-        width: 70%;
-    }
-    .register-title h1 {
-        margin: 0;
-        padding: 0.5rem;
-        font-size: 35px;
-    }
+  .register-body,
+  .login-body {
+    max-width: 60%;
+  }
+  .register-title {
+    width: 90%;
+    font-size: x-large;
+  }
+  .info-new-user input {
+    width: 20rem;
+  }
+  .budget-page {
+    width: 70%;
+  }
+  .register-title h1 {
+    margin: 0;
+    padding: 0.5rem;
+    font-size: 35px;
+  }
 }
 
 /* Sección de registro */
-.section-register{
-    box-sizing: border-box;
-    display: flex;
-    padding: 10px;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background: #ECBCB1;
-    width: 100vw;
-    height: 100vh;
+.section-register {
+  box-sizing: border-box;
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background: #ecbcb1;
+  width: 100vw;
+  height: 100vh;
 }
 
-[class^="register-"]{
-    box-sizing: border-box;
-    display: flex;
-    border: solid #4C4B62 2px;
-    width: 300px;
-    height: 50px;
-    margin: 15px;
-    padding: 5px;
-    border-radius: 10px;
-    font-size: 1.5rem;
-    font-family: 'Cabin', sans-serif;
+[class^="register-"] {
+  box-sizing: border-box;
+  display: flex;
+  border: solid #4c4b62 2px;
+  width: 300px;
+  height: 50px;
+  margin: 15px;
+  padding: 5px;
+  border-radius: 10px;
+  font-size: 1.5rem;
+  font-family: "Cabin", sans-serif;
 }
 
-.section-register h1{
-    text-align: center;
-    color: #4C4B62;
-    font-size: 2rem;
+.section-register h1 {
+  text-align: center;
+  color: #4c4b62;
+  font-size: 2rem;
 }
 
-.button-register{
-    box-sizing: border-box;
-    display: flex;
-    padding: 3px;
-    width: 180px;
-    height: 45px;
-    font-size: 1.5rem;
-    color: #ffffff;
-    background: #4C4B62;
-    border: none;
-    border-radius: 35px;
-    justify-content: center;   
+.button-register {
+  box-sizing: border-box;
+  display: flex;
+  padding: 3px;
+  width: 180px;
+  height: 45px;
+  font-size: 1.5rem;
+  color: #ffffff;
+  background: #4c4b62;
+  border: none;
+  border-radius: 35px;
+  justify-content: center;
 }
