Se Agrego inicio de sesión con facebook y gmail

--- a/src/style.css
+++ b/src/style.css
@@ -116,9 +116,10 @@ figure {
     background-color: #ffffff;
 }
 
-.hide {
+
+/* .hide {
     display: none;
-}
+} */
 
 .info-user {
     width: fit-content;
