--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,6 @@ figure {
 }
 
 .logo img {
-    margin-top: 2rem;
     height: 85%;
 }
 
@@ -48,10 +47,11 @@ figure {
     display: flex;
     flex-direction: column;
     align-items: center;
+    align-content: center;
     width: 90vw;
-    height: 80vh;
+    height: auto;
     background-color: #CAC8CA;
-    margin: 2rem auto;
+    margin: 4rem auto;
     border-radius: 15px;
 }
 
@@ -59,7 +59,7 @@ figure {
     margin: 0 auto;
 }
 
-.welcome-body p {
+.welcome-body {
     padding: 0rem 2rem;
     text-align: justify;
     color: #4c4b62;
@@ -68,7 +68,8 @@ figure {
 .login-button,
 .register-button,
 .enter-button,
-.button-register {
+.button-register,
+#closer {
     text-decoration: none;
     padding: 10px;
     font-weight: 600;
@@ -77,8 +78,8 @@ figure {
     background-color: #faca6d;
     border-radius: 6px;
     border: 2px solid #f7dca8;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
 }
 
 .fb-button {
@@ -111,15 +112,15 @@ figure {
 .login-button:hover,
 .register-button:hover,
 .enter-button:hover,
-.button-register:hover {
+.button-register:hover,
+#closer:hover {
     color: #faca6d;
     background-color: #ffffff;
 }
 
-
-/* .hide {
+.hide {
     display: none;
-} */
+}
 
 .info-user {
     width: fit-content;
@@ -155,8 +156,7 @@ figure {
     color: #4c4b62;
 }
 
-#close,
-#close-r {
+#close {
     background-color: transparent;
     float: right;
     border: none;
@@ -165,21 +165,34 @@ figure {
     margin-top: 10px;
 }
 
-#close:hover,
-#close-r:hover {
+#close:hover {
     transform: scale(1.5);
     font-size: 12px;
     border-radius: 20px;
 }
 
+.web {
+    display: hide;
+}
+
 @media only screen and (min-width: 768px) {
+    .section-register h1 {
+        text-align: center;
+        color: #4C4B62;
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+    .logo img {
+        height: 85%;
+    }
     .register-body,
     .login-body {
         max-width: 60%;
     }
     .register-title {
-        width: 90%;
-        font-size: x-large;
+        margin: 0;
+        padding: 0.5rem;
+        font-size: 35px;
     }
     .info-new-user input {
         width: 20rem;
@@ -191,6 +204,9 @@ figure {
         margin: 0;
         padding: 0.5rem;
         font-size: 35px;
+    }
+    .description {
+        display: hide;
     }
 }
 
@@ -205,20 +221,23 @@ figure {
     justify-content: space-around;
     align-items: center;
     background-color: #CAC8CA;
-    width: 90vw;
+    width: auto;
     height: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    align-content: center;
 }
 
-[class^="register-"] {
+.register {
     box-sizing: border-box;
     display: flex;
     border: 2px solid #f7dca8;
-    width: 300px;
-    height: 50px;
-    margin: 15px;
+    width: 200px;
+    height: 45px;
+    margin: 5px;
     padding: 5px;
     border-radius: 10px;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-family: 'Cabin', sans-serif;
 }
 
@@ -228,18 +247,3 @@ figure {
     font-size: 2rem;
     margin-bottom: 1rem;
 }
-
-
-/* .button-register {
-    box-sizing: border-box;
-    display: flex;
-    padding: 3px;
-    width: 180px;
-    height: 45px;
-    font-size: 1.5rem;
-    color: #ffffff;
-    background: #4C4B62;
-    border: none;
-    border-radius: 35px;
-    justify-content: center;
-} */
