Se agrego login con facebook y gmail

--- a/src/style.css
+++ b/src/style.css
@@ -208,6 +208,11 @@ figure {
     .description {
         display: hide;
     }
+    .section-register {
+        margin-top: 50px;
+        margin-bottom: 20px;
+        align-content: center;
+    }
 }
 
 
