Hicimos maquetación de cada una de las secciones (home, perfil, timeline, registro y inicio de seción). También se maqueto y agregó estilos al navbar. Ya inicia sesión con email y contraseña y con las modalidades de Gmail y Facebook. Ya se puede hacer un nuevo registro con verficación a correo electrónico

--- a/src/style.css
+++ b/src/style.css
@@ -1,231 +1,518 @@
-.selector-for-some-widget {
-  box-sizing: content-box;
-}
-
-body {
-  background-color: #ecbcb1;
-  font-family: "Roboto", sans-serif;
-}
-
-figure {
+* {
+  padding: 0;
   margin: 0;
-  height: 50vh;
-}
-
-.register,
-.login,
-.logo,
-.welcome-page {
-  display: flex;
-  justify-content: center;
-}
-
-.logo {
-  display: flex;
-  height: 40vh;
-}
-
-.logo img {
-  margin-top: 2rem;
-  height: 85%;
-}
-
-.welcome-body,
-.register-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 90%;
-  height: auto;
-  background-color: #cac8ca;
-  margin: 2rem auto;
-  border-radius: 15px;
-}
-
-.login-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 90vw;
-  height: 80vh;
-  background-color: #cac8ca;
-  margin: 2rem auto;
-  border-radius: 15px;
-}
-
-.login-body p {
-  margin: 0 auto;
-}
-
-.welcome-body p {
-  padding: 0rem 2rem;
-  text-align: justify;
-  color: #4c4b62;
-}
-
-.login-button,
-.register-button,
-.enter-button {
-  text-decoration: none;
-  padding: 10px;
-  font-weight: 600;
-  font-size: 20px;
-  color: #ffffff;
-  background-color: #faca6d;
-  border-radius: 6px;
-  border: 2px solid #f7dca8;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-}
-
-.fb-button {
-  text-decoration: none;
-  padding: 10px;
-  font-weight: 600;
-  font-size: 20px;
-  color: #ffffff;
-  background-color: #2f3adb;
-  border-radius: 6px;
-  border: 2px solid #373ad3;
-  margin-bottom: 1rem;
-  margin-top: 2rem;
-  cursor: pointer;
-}
-
-.google-button {
-  text-decoration: none;
-  padding: 10px;
-  font-weight: 600;
-  font-size: 20px;
-  color: #ffffff;
-  background-color: red;
-  border-radius: 6px;
-  border: 2px solid red;
-  margin-bottom: 1rem;
-  cursor: pointer;
-}
-
-.login-button:hover,
-.register-button:hover,
-.enter-button:hover {
-  color: #faca6d;
-  background-color: #ffffff;
-}
-
-.info-user {
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 10%;
-}
-
-.info-user input {
-  -webkit-box-shadow: 9px 2px 17px 1px rgba(58, 51, 53, 0.13);
-  -moz-box-shadow: 9px 2px 17px 1px rgba(58, 51, 53, 0.13);
-  box-shadow: 9px 2px 17px 1px rgba(58, 51, 53, 0.13);
-  margin: 0.5rem auto;
-  border-radius: 15px;
-  border: 2px solid #faca6d;
-  padding: 0.5rem;
-}
-
-.line {
-  margin: 0px 20px;
-  width: 90px;
-  border-top: 1px solid #999;
-  position: relative;
-  top: 10px;
-  float: left;
-}
-
-.leyend {
-  font-weight: bold;
-  float: left;
-  color: #4c4b62;
-}
-
-#close {
-  background-color: transparent;
-  float: right;
-  border: none;
-  font-size: 12px;
-  margin-right: 30px;
-  margin-top: 10px;
-}
-
-#close:hover {
-  background-color: #4c4b62;
-  transform: scale(1.5);
-  font-size: 12px;
-  border-radius: 20px;
-}
-
-@media only screen and (min-width: 768px) {
-  .register-body,
-  .login-body {
-    max-width: 60%;
-  }
-  .register-title {
-    width: 90%;
-    font-size: x-large;
-  }
-  .info-new-user input {
-    width: 20rem;
-  }
-  .budget-page {
-    width: 70%;
-  }
-  .register-title h1 {
-    margin: 0;
-    padding: 0.5rem;
-    font-size: 35px;
-  }
-}
-
-/* Sección de registro */
-.section-register {
   box-sizing: border-box;
-  display: flex;
-  padding: 10px;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  background: #ecbcb1;
-  width: 100vw;
+}
+/* Estilos Generales */
+body {
+  font-family: "Cabin", sans-serif;
+  color: #4c4b62;
+}
+.btn-blue {
+  width: 130px;
+  height: 40px;
+  background-color: #4c4b62;
+  color: #cac8c9;
+  font-family: "Cabin", sans-serif;
+  font-weight: 600;
+  border-radius: 20px;
+  font-size: 16px;
+  border: transparent;
+}
+
+/* HOME */
+/* Estilos de home */
+.home-section {
+  background-color: #bdd5d7;
   height: 100vh;
 }
 
-[class^="register-"] {
-  box-sizing: border-box;
-  display: flex;
-  border: solid #4c4b62 2px;
-  width: 300px;
-  height: 50px;
-  margin: 15px;
-  padding: 5px;
-  border-radius: 10px;
-  font-size: 1.5rem;
-  font-family: "Cabin", sans-serif;
-}
-
-.section-register h1 {
+.home-elements {
+  width: 75%;
+  padding-top: 50%;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
-  color: #4c4b62;
-  font-size: 2rem;
 }
 
-.button-register {
-  box-sizing: border-box;
-  display: flex;
-  padding: 3px;
-  width: 180px;
-  height: 45px;
-  font-size: 1.5rem;
-  color: #ffffff;
+.home-elements figure {
+  margin-bottom: 20px;
+}
+.home-elements img {
+  width: 100%;
+}
+
+.text-information {
+  margin-bottom: 20px;
+}
+
+.btn-simulation {
+  width: 130px;
+  height: 40px;
+  background-color: #4c4b62;
+  border-radius: 20px;
+  border: transparent;
+  padding-top: 10px;
+  margin-right: 5px;
+  float: left;
+}
+
+.btn-simulation a {
+  text-decoration: none;
+  color: #cac8c9;
+  font-family: "Cabin", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  margin-top: 3px;
+}
+/* INICIO DE SESIÓN */
+/* Estilos inicio de sesión */
+.login-section {
+  background-color: #ecbcb1;
+  height: 100vh;
+}
+
+.login-elements {
+  width: 75%;
+  padding-top: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.login-section a {
+  position: absolute;
+  margin: 5%;
+}
+
+.login-elements h2 {
+  margin-bottom: 20px;
+}
+
+.sn-btn {
+  width: 260px;
+  height: 40px;
   background: #4c4b62;
-  border: none;
-  border-radius: 35px;
-  justify-content: center;
+  color: aliceblue;
+  border-radius: 20px;
+  border: transparent;
+  font-family: "Cabin", sans-serif;
+  font-size: 95%;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.google-btn {
+  background-color: #f14336;
+}
+
+.facebook-btn {
+  background-color: #3b5998;
+}
+
+.login-elements input {
+  width: 247px;
+  height: 30px;
+  font-family: "Cabin", sans-serif;
+  font-size: 15px;
+  color: #4c4b62;
+  background: transparent;
+  border-color: #4c4b62;
+  border-radius: 20px;
+  display: block;
+  margin: 10px;
+  border: solid 3px;
+  padding-left: 5px;
+}
+
+/* REGISTRO */
+/* Estilos REGISTRO */
+.signin-section {
+  background-color: #ecbcb1;
+  height: 100vh;
+}
+
+.signin-elements {
+  width: 75%;
+  padding-top: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.signin-section a {
+  position: absolute;
+  margin: 5%;
+}
+
+.signin-elements h2 {
+  margin-bottom: 20px;
+}
+
+.signin-elements input {
+  width: 247px;
+  height: 30px;
+  font-family: "Cabin", sans-serif;
+  font-size: 15px;
+  color: #4c4b62;
+  background: transparent;
+  border-color: #4c4b62;
+  border-radius: 20px;
+  display: block;
+  margin: 10px;
+  border: solid 3px;
+  padding-left: 5px;
+}
+
+.signin-elements select {
+  width: 247px;
+  height: 30px;
+  font-family: "Cabin", sans-serif;
+  font-size: 15px;
+  color: #4c4b62;
+  background: transparent;
+  border-color: #4c4b62;
+  border-radius: 20px;
+  display: block;
+  margin: 10px;
+  border: solid 3px;
+  padding-left: 5px;
+}
+
+.signin-elements .btn-blue {
+  width: 130px;
+  height: 40px;
+  background-color: #4c4b62;
+  color: #cac8c9;
+  font-family: "Cabin", sans-serif;
+  font-weight: 600;
+  border-radius: 20px;
+  font-size: 16px;
+  border: transparent;
+  cursor: pointer;
+}
+
+/* PERFIL */
+/* Estilos de perfil */
+.profile {
+  background-color: #bdd5d7;
+  height: 100vh;
+}
+/* NAVBAR */
+.navbar-profile {
+  width: 100%;
+  height: 15%;
+  position: absolute;
+  z-index: 100;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.navbar-profile a img {
+  width: 55px;
+}
+
+.navbar-profile a {
+  display: block;
+  float: left;
+  margin-top: 3%;
+  margin-left: 4%;
+}
+
+.close {
+  padding-top: 6%;
+  position: relative;
+  left: 42%;
+  color: #cac8c9;
+  font-size: 15px;
+  font-weight: 400;
+}
+/* PERFIL */
+.profile-container {
+  background: #4c4b62;
+  width: 100%;
+  height: 35vh;
+  color: #cac8c9;
+  position: relative;
+  overflow: hidden;
+}
+
+.img-text-profile {
+  width: 80%;
+  margin-top: 25%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.shape-circule {
+  overflow: hidden;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  float: left;
+  text-align: center;
+  margin-right: 20px;
+}
+.profile-container img {
+  width: 200px;
+  right: 39px;
+  position: relative;
+}
+.text-profile {
+  padding-top: 20px;
+}
+.text-profile h1 {
+  font-size: 16px;
+}
+
+.text-profile h2 {
+  font-size: 14px;
+}
+
+.text-profile h3 {
+  font-size: 11px;
+}
+
+/* Estilos publicación en perfil */
+.container-post {
+  width: 80vw;
+  height: 25vh;
+  background: #4c4b62;
+  color: #cac8c9;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  border-radius: 20px;
+  overflow: hidden;
+  padding-top: 13px;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+.container-post h2 {
+  font-size: 15px;
+}
+
+.profile .text-post {
+  position: relative;
+  bottom: 10px;
+}
+
+.delete-btn img {
+  width: 15px;
+}
+
+.delete-btn {
+  width: 20px;
+  height: 20px;
+  background: transparent;
+  border: transparent;
+  position: relative;
+  display: block;
+  left: 242px;
+  cursor: pointer;
+}
+
+.recommendation {
+  color: #faca6d;
+  float: left;
+  margin-right: 5px;
+}
+
+.company {
+  font-size: 16px;
+}
+
+.commentary {
+  font-size: 14px;
+  margin-bottom: 3px;
+}
+
+.contact {
+  float: left;
+  margin-top: 4px;
+  color: #cac8c9;
+}
+
+.stars {
+  display: unset;
+  position: relative;
+  left: 63px;
+}
+
+/* Estilos formulario nueva publicación */
+.container-newpost {
+  width: 80vw;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.container-newpost input {
+  width: 247px;
+  height: 30px;
+  font-family: "Cabin", sans-serif;
+  font-size: 15px;
+  color: #4c4b62;
+  background: transparent;
+  border-color: #4c4b62;
+  border-radius: 20px;
+  display: block;
+  margin: 10px;
+  border: solid 3px;
+  padding-left: 5px;
+}
+
+.container-newpost textarea {
+  font-family: "Cabin", sans-serif;
+  font-size: 15px;
+  color: #4c4b62;
+  background: transparent;
+  border-color: #4c4b62;
+  border-radius: 15px;
+  display: block;
+  margin: 10px;
+  border: solid 3px;
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
+/* TIMELINE */
+/* NAVBAR */
+.navbar-timeline {
+  width: 100%;
+  height: 15%;
+  position: absolute;
+  z-index: 100;
+  overflow: hidden;
+}
+
+.navbar-timeline a img {
+  right: 21px;
+  width: 100px;
+  position: relative;
+  margin-right: 5%;
+}
+
+.navbar-timeline .shape-circule {
+  width: 50px;
+  height: 50px;
+  margin-right: 9px;
+}
+
+.navbar-timeline a {
+  color: #4c4b62;
+  display: block;
+  float: left;
+  margin-top: 3%;
+  margin-left: 4%;
+}
+
+.navbar-timeline .close {
+  left: 18%;
+  padding-top: 3%;
+}
+
+.name-timeline {
+  font-size: 10px;
+  font-weight: 600;
+  display: block;
+  float: right;
+  text-decoration-line: underline;
+  padding-top: 10%;
+}
+
+/* Estilos de TIMELINE */
+.timeline {
+  background-color: #ecbcb1;
+  height: 100vh;
+}
+
+.timeline input {
+  width: 247px;
+  height: 30px;
+  font-family: "Cabin", sans-serif;
+  font-size: 15px;
+  color: #4c4b62;
+  background: transparent;
+  border-color: #4c4b62;
+  border-radius: 20px;
+  display: block;
+  margin: 10px 10px 10px 0px;
+  border: solid 3px;
+  padding-left: 5px;
+}
+
+.box {
+  width: 247px;
+  padding-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.container-1 {
+  white-space: nowrap;
+  position: relative;
+  vertical-align: middle;
+}
+
+.container-1 input#search {
+  float: left;
+  padding-left: 27px;
+}
+
+.container-1 .icon {
+  position: absolute;
+  top: 50%;
+  margin-left: 10px;
+  margin-top: 17px;
+  z-index: 1;
+}
+
+.icon img {
+  width: 65%;
+}
+
+/* Publicación en timeline like */
+.n-like-btn img {
+  width: 26px;
+  cursor: pointer;
+}
+
+.likes-section {
+  width: 225px;
+  position: relative;
+  left: 214px;
+  bottom: 3px;
+}
+.n-like-btn {
+  width: 23px;
+  background: transparent;
+  border: transparent;
+  display: block;
+  float: right;
+  position: relative;
+  bottom: 22px;
+  right: 80%;
+  cursor: pointer;
+}
+
+.like-btn {
+  background: transparent;
+  border: transparent;
+  display: block;
+  float: right;
+  position: relative;
+  bottom: 22px;
+  right: 80%;
+  cursor: pointer;
+  display: none;
+}
+
+.text-post {
+  position: relative;
+  bottom: 10px;
+}
+
+.likes-section p {
+  width: 36px;
+  font-size: 14px;
 }
