--- a/src/style.css
+++ b/src/style.css
@@ -340,6 +340,38 @@ body {
   left: 63px;
 }
 
+/* Estilos modal eliminar */
+.modal-container-delete {
+  background: rgba(76, 75, 98, 0.8);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  z-index: 101;
+}
+
+.modal-content-delete {
+  width: 80vw;
+  height: 25vh;
+  background: #bdd5d7;
+  border-radius: 20px;
+  width: 90%;
+  max-width: 1000px;
+  margin: auto;
+  display: flex;
+}
+
+.elements-modal-delete {
+  text-align: center;
+  margin: auto;
+  font-size: 23px;
+}
+
+.elements-modal-delete p {
+  margin-bottom: 15px;
+}
+
 /* Estilos formulario nueva publicación */
 .container-newpost {
   width: 80vw;
