--- a/src/style.css
+++ b/src/style.css
@@ -351,6 +351,11 @@ body {
   float: left;
   margin-top: 4px;
   color: #cac8c9;
+  background: transparent;
+  text-decoration: underline;
+  border: transparent;
+  font-family: "Cabin", sans-serif;
+  font-size: 16px;
 }
 
 .stars {
@@ -467,6 +472,61 @@ body {
   border: solid 3px;
   padding-left: 5px;
   padding-top: 5px;
+}
+/* MODAL CONTACTO */
+.modal-container-contact {
+  background: rgba(76, 75, 98, 0.8);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  z-index: 101;
+}
+.contact-modal {
+  margin: auto;
+  width: 80vw;
+  height: 70vh;
+  background: #bdd5d7;
+  border-radius: 20px;
+}
+
+.contact-modal figure {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  left: 241px;
+  top: 19px;
+}
+
+.contact-modal-elements {
+  width: 80%;
+  height: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20%;
+}
+
+.contact-modal-elements h2 {
+  margin-bottom: 5px;
+}
+
+.data-contact-prin {
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.data-contact {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.data-contact img {
+  margin-right: 10px;
+}
+
+.adress-icon {
+  margin-right: 10px;
 }
 
 /* TIMELINE */
