--- a/src/style.css
+++ b/src/style.css
@@ -669,3 +669,32 @@ body {
   width: 36px;
   font-size: 14px;
 }
+
+@media screen and (min-width: 1000px) {
+  .home-elements {
+    padding-top: 150px;
+    align-items: center;
+  }
+  .two-btn {
+    width: 640px;
+    height: 71px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .text-information {
+    font-size: 25px;
+  }
+
+  .btn-simulation {
+    width: 258px;
+    height: 45px;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .btn-simulation a {
+    font-size: 23px;
+    margin-top: 5px;
+  }
+}
