--- a/src/style.css
+++ b/src/style.css
@@ -670,7 +670,8 @@ body {
   font-size: 14px;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 770px) {
+  /* HOME */
   .home-elements {
     padding-top: 150px;
     align-items: center;
@@ -696,5 +697,16 @@ body {
   .btn-simulation a {
     font-size: 23px;
     margin-top: 5px;
+  }
+
+  /* LOGIN */
+  .login-elements {
+    padding-top: 15%;
+  }
+
+  .form-login {
+    width: 28%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
