--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@ body {
 .home-section {
   background-color: #bdd5d7;
   height: 100vh;
+  overflow: scroll;
 }
 
 .home-elements {
@@ -70,6 +71,7 @@ body {
 .login-section {
   background-color: #ecbcb1;
   height: 100vh;
+  overflow: scroll;
 }
 
 .login-elements {
@@ -130,6 +132,7 @@ body {
 .signin-section {
   background-color: #ecbcb1;
   height: 100vh;
+  overflow: scroll;
 }
 
 .signin-elements {
@@ -303,7 +306,7 @@ body {
   margin-top: 30px;
   margin-bottom: 10px;
   border-radius: 20px;
-  overflow: hidden;
+  overflow: scroll;
   padding-top: 13px;
   padding-left: 12px;
   padding-right: 12px;
@@ -378,7 +381,7 @@ body {
 }
 
 .modal-content-n-post {
-  height: 70vh;
+  height: 74%;
   background: #bdd5d7;
   border-radius: 20px;
   width: 90%;
@@ -422,7 +425,7 @@ body {
   width: 80vw;
   text-align: center;
   margin-left: auto;
-  margin-right: 8px;
+  margin-right: 6vw;
   margin-top: -2px;
 }
 
@@ -487,9 +490,10 @@ body {
 .contact-modal {
   margin: auto;
   width: 80vw;
-  height: 70vh;
+  height: 70%;
   background: #bdd5d7;
   border-radius: 20px;
+  overflow: scroll;
 }
 
 .contact-modal figure {
@@ -579,6 +583,7 @@ body {
 .timeline {
   background-color: #ecbcb1;
   height: 100vh;
+  overflow: scroll;
 }
 
 .timeline input {
@@ -724,11 +729,15 @@ body {
 
   /* NAVBAR */
   .navbar-profile {
-    height: 22%;
+    height: 112px;
   }
 
   .navbar-profile a img {
     width: 70px;
+  }
+  .navbar-profile a {
+    margin-top: 25px;
+    margin-left: 21px;
   }
   .close {
     padding-top: 1%;
@@ -737,7 +746,8 @@ body {
 
   /* PROFILE PERSON */
   .profile-container {
-    height: 45vh;
+    height: 300px;
+    overflow: scroll;
   }
   .img-text-profile {
     width: 50%;
@@ -773,8 +783,8 @@ body {
     margin-top: 27px;
   }
   .container-post {
-    width: 56vw;
-    height: 30vh;
+    width: 577px;
+    height: 200px;
     padding-left: 24px;
     padding-right: 24px;
   }
@@ -813,7 +823,7 @@ body {
 
   /* NAVBAR TIMELINE */
   .navbar-timeline {
-    height: 20%;
+    height: 112px;
   }
   .navbar-timeline .shape-circule {
     width: 70px;
@@ -862,19 +872,27 @@ body {
 
   /* MODAL NEW POST */
   .modal-content-n-post {
-    width: 30%;
+    width: 318px;
+    height: 70%;
+    overflow: scroll;
   }
 
   .container-newpost {
-    width: 28vw;
+    width: 76%;
     margin-top: 2px;
+  }
+
+  .close-btn {
+    left: 269px;
   }
 
   .modal-content-delete {
     width: 35%;
+    overflow: scroll;
   }
 
   .contact-modal {
-    width: 27vw;
+    width: 285px;
+    height: 450px;
   }
 }
